--- a/download.html
+++ b/download.html
@@ -611,25 +611,25 @@
 
   </div> <!--end of device-->
   <div class="ex-basic-4">
-    <div class="card-header" id="x00t">
+    <div class="card-header" id="X00TD">
       <h2 class="p-large">
         <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">
-          <i class="fas fa-mobile-alt"></i>  X00T
+          <i class="fas fa-mobile-alt"></i>  X00TD
         </button>
       </h2>
     </div>
-    <div id="collapseEighteen" class="collapse" aria-labelledby="x00t" data-parent="#devicelist">
+    <div id="collapseEighteen" class="collapse" aria-labelledby="X00TD" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue"></span></h6>
-		<h6>Device:  <span class="blue"></span></h6>
-		<h6>Codename:  <span class="blue">x00t</span></h6>
+        <h6>Maintainer:  <span class="blue">pkm774</span></h6>
+		<h6>Device:  <span class="blue">ZenFone Max Pro M1</span></h6>
+		<h6>Codename:  <span class="blue">X00TD</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
-	  <a class="btn-solid-lg popup-with-move-anim" href="#x00t-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
-	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374518/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg popup-with-move-anim" href="#X00TD-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
+	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusX00T" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
 	  </p>
 
@@ -904,7 +904,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/enchilada.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/enchilada.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -912,7 +912,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/raphael.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/raphael.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -920,7 +920,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/beryllium.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/beryllium.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -928,7 +928,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/davinci.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/davinci.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -936,7 +936,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/RMX1801.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/RMX1801.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -944,7 +944,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/phoenix.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/phoenix.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -952,7 +952,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/RMX199X.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/RMX199X.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -960,7 +960,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/mido.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/mido.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -968,7 +968,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/kenzo.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/kenzo.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -976,7 +976,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/begonia.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/begonia.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -984,7 +984,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/sanders.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/sanders.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -992,7 +992,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/tissot"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/tissot"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1000,7 +1000,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/curtana.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/curtana.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1008,7 +1008,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/vince.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/vince.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1016,7 +1016,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/violet.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/violet.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1024,7 +1024,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/wayne.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/wayne.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1032,15 +1032,15 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/whyred.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/whyred.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
-	<div id="x00t-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
+	<div id="X00TD-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/x00t.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/X00TD.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1048,7 +1048,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/grus.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/grus.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1056,7 +1056,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/jd2019.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/jd2019.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1064,7 +1064,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/dipper.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/dipper.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1072,7 +1072,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/X00P.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/X00P.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1080,7 +1080,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/ginkgo.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/ginkgo.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
@@ -1088,7 +1088,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="http://changelog.corvusrom.com/jasmine_sprout.html"></iframe>
+		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/jasmine_sprout.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
