--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 		<div class="changelog-container">
-		<iframe  class="changelog-iframe" src="https://changelog.corvusrom.com/index.html"></iframe>
+		<iframe  width="100%" height="100%" frameborder="0" class="changelog-iframe" src="https://changelog.corvusrom.com/index.html"></iframe>
         </div>
 
     </div> <!-- end of lightbox-basic -->
