Update Violet Download link

--- a/download.html
+++ b/download.html
@@ -543,7 +543,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://sourceforge.net/projects/my-roms-violet/files/CorvusOS/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1372063#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#violet-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusViolet" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/redmi-note-7-pro/development/rom-corvus-os-v3-5-t4074793" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
