Update menus in Download page

--- a/download.html
+++ b/download.html
@@ -74,7 +74,7 @@
                     <a class="nav-link page-scroll" href="index.html#preview">PREVIEW</a>
                 </li>
 				<li class="nav-item">
-                    <a class="nav-link page-scroll" href="download.html">DOWNLOAD</a>
+                    <a class="nav-link page-scroll" href="https://github.com/Corvus-ROM">GITHUB</a>
                 </li>
 
 
