updated whyred download link

--- a/download.html
+++ b/download.html
@@ -599,7 +599,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://downloads.corvusrom.com/0:/whyred/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1375302#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#whyred-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusWhyred" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/redmi-note-5-pro/development/rom-corvus-os-v4-0-t4082321" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
