--- a/download.html
+++ b/download.html
@@ -151,7 +151,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
 			        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374627/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374627#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#enchilada-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusEnchilada" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/oneplus-6/development/rom-corvus-4-0-t4081269" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -178,7 +178,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1371991/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1371991#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#raphael-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusRaphael" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/oneplus-6/development/rom-corvus-4-0-t4081269" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -207,7 +207,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1372060/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1372060#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#beryllium-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/corvusberyllium" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/poco-f1/development/rom-corvus-os-v4-5-t4086151/page7" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -235,7 +235,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1404380/"style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1404380#files-panel"style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#davinci-lightbox-1"style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusDavinci" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/mi-9t/development/davinci-corvus-os-v7-0-t4134527/post83080419#post83080419" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -263,7 +263,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1396065/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1396065#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#RMX1801-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusRMX1801" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/realme-2-pro/development/rom-t4118605" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -291,7 +291,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1396780/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1396780#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#Phoenix-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusPhoenixX2" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/poco-x2/development/rom-corvus-os-v5-5-t4107361" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -319,7 +319,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1398668/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1398668#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#RMX199X-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusRMX1992" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/member.php?u=7054056" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -347,7 +347,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1372054/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1372054#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#mido-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusMido" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a> <!--xda needs to update-->
@@ -375,7 +375,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1401301/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1401301#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#Kenzo-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusKenzo" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/redmi-note-3/development/official-corvus-os-v6-5-t4129719" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -403,7 +403,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-download" ></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1401207#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#begonia-lightbox-1"style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments" ></i>XDA Thread</a>
@@ -431,7 +431,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1403961#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#sanders-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -487,7 +487,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://sourceforge.net/projects/curtana/files/Corvus_v7.5-OMEN-curtana-Gapps-26072020-OFFICIAL-0105.zip" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1410751#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#curtana-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusCurtana" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/redmi-note-9-pro/development/corvus-rom-official-curtana-t4138373" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -515,7 +515,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://downloads.corvusrom.com/0:/vince/Corvus_v7.5-OMEN-vince-Gapps-25072020-OFFICIAL-1821.zip" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1386955#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#vince-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusVince" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -571,7 +571,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374531/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374531#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#wayne-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusJasmineWayne" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/mi-a2/xiaomi-6x-wayne/rom-corvus-os-v3-5-mi-6x-wayne-t4079071" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -627,7 +627,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374518/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1374518#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#X00TD-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusX00T" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -655,7 +655,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1401208/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1401208#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#grus-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusGrus" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -684,7 +684,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1404383/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1404383#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#JD2019-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusJD2019" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/z5-pro-gt/lenovo-z5-pro-no-gt-qa-guides-development/rom-corvus-os-t4136973" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -713,7 +713,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1417150#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#dipper-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -742,7 +742,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1401370#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#X00P-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -771,7 +771,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1378207/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1378207#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#ginkgo-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusGinkgo" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/redmi-note-8/development/rom-corvus-os-v7-5-t4141047/post83180923#post83180923" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
@@ -800,7 +800,7 @@
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1379272/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1379272#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#jasmine_sprout-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusJasmineWayne" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="#" style="margin: 10px"><i class="fas fa-comments" ></i>XDA Thread</a>
