Update maintainer for Phoenix (POCO X2)

--- a/download.html
+++ b/download.html
@@ -285,7 +285,7 @@
     <div id="collapseSix" class="collapse" aria-labelledby="Phoenix" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">Hard_rock83</span></h6>
+        <h6>Maintainer:  <span class="blue">Trishiraj</span></h6>
 		<h6>Device:  <span class="blue">Poco X2</span></h6>
 		<h6>Codename:  <span class="blue">Phoenix</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -294,7 +294,7 @@
 	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1396780#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#Phoenix-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusPhoenixX2" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
-	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/poco-x2/development/rom-corvus-os-v5-5-t4107361" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
+	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/t/rom-android-11-0-corvus-rom-v12-0-athrill-official-06-12-20-stable.4198933" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
 	  </p>
 
       </div>
