Update Email Address

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                     <h2>CONTACT</h2>
                     <ul class="list-unstyled li-space-lg">                        
                         <li><i class="fab fa-telegram"></i><a class="blue" href="https://t.me/CorvusCommunityOfficial">Support Group</a></li>                        
-                        <li><i class="fas fa-envelope"></i><a class="blue" href="mailto:oscorvus@gmail.com">Email us</a></li>
+                        <li><i class="fas fa-envelope"></i><a class="blue" href="mailto:contact@corvusrom.com">Email Us</a></li>
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -787,7 +787,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright ©2020 Corvus Rom. All Rights Reserved.</p>
+                    <p class="p-small">Copyright ©2020-2021 Corvus Rom. All Rights Reserved.</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
