Update the collapse class according to the list

--- a/download.html
+++ b/download.html
@@ -1105,12 +1105,12 @@
   <div class="ex-basic-4">
     <div class="card-header" id="lavender">
       <h2 class="p-large">
-        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtyFour" aria-expanded="false" aria-controls="collapseThirtyFour">
+        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtyFive" aria-expanded="false" aria-controls="collapseThirtyFive">
           <i class="fas fa-mobile-alt"></i> LAVENDER
         </button>
       </h2>
     </div>
-    <div id="collapseThirtyFour" class="collapse" aria-labelledby="lavender" data-parent="#devicelist">
+    <div id="collapseThirtyFive" class="collapse" aria-labelledby="lavender" data-parent="#devicelist">
       <div class="card-body">
 
         <h6>Maintainer:  <span class="blue">CHRISL7</span></h6>
@@ -1131,12 +1131,12 @@
   <div class="ex-basic-4">
     <div class="card-header" id="surya">
       <h2 class="p-large">
-        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtyFive" aria-expanded="false" aria-controls="collapseThirtyFive">
+        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtySix" aria-expanded="false" aria-controls="collapseThirtySix">
           <i class="fas fa-mobile-alt"></i> SURYA
         </button>
       </h2>
     </div>
-    <div id="collapseThirtyFive" class="collapse" aria-labelledby="surya" data-parent="#devicelist">
+    <div id="collapseThirtySix" class="collapse" aria-labelledby="surya" data-parent="#devicelist">
       <div class="card-body">
 
         <h6>Maintainer:  <span class="blue">thepsambit</span></h6>
@@ -1157,12 +1157,12 @@
   <div class="ex-basic-4">
     <div class="card-header" id="sakura">
       <h2 class="p-large">
-        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtySix" aria-expanded="false" aria-controls="collapseThirtySix">
+        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtySeven" aria-expanded="false" aria-controls="collapseThirtySeven">
           <i class="fas fa-mobile-alt"></i> SAKURA
         </button>
       </h2>
     </div>
-    <div id="collapseThirtySix" class="collapse" aria-labelledby="sakura" data-parent="#devicelist">
+    <div id="collapseThirtySeven" class="collapse" aria-labelledby="sakura" data-parent="#devicelist">
       <div class="card-body">
 
         <h6>Maintainer:  <span class="blue">Darthinperator21</span></h6>
@@ -1183,12 +1183,12 @@
   <div class="ex-basic-4">
     <div class="card-header" id="payton">
       <h2 class="p-large">
-        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtySeven" aria-expanded="false" aria-controls="collapseThirtySeven">
+        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtyEight" aria-expanded="false" aria-controls="collapseThirtyEight">
           <i class="fas fa-mobile-alt"></i> PAYTON
         </button>
       </h2>
     </div>
-    <div id="collapseThirtySeven" class="collapse" aria-labelledby="payton" data-parent="#devicelist">
+    <div id="collapseThirtyEight" class="collapse" aria-labelledby="payton" data-parent="#devicelist">
       <div class="card-body">
 
         <h6>Maintainer:  <span class="blue">Yukki159</span></h6>
@@ -1209,12 +1209,12 @@
   <div class="ex-basic-4">
     <div class="card-header" id="X01BD">
       <h2 class="p-large">
-        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtyEight" aria-expanded="false" aria-controls="collapseThirtyEight">
+        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThirtyNine" aria-expanded="false" aria-controls="collapseThirtyNine">
           <i class="fas fa-mobile-alt"></i> X01BD
         </button>
       </h2>
     </div>
-    <div id="collapseThirtyEight" class="collapse" aria-labelledby="X01BD" data-parent="#devicelist">
+    <div id="collapseThirtyNine" class="collapse" aria-labelledby="X01BD" data-parent="#devicelist">
       <div class="card-body">
 
         <h6>Maintainer:  <span class="blue">Curious_To_Learn</span></h6>
