Update changelogs for the last added devices

--- a/download.html
+++ b/download.html
@@ -1604,6 +1604,51 @@
         </div>
 
     </div> <!-- end of lightbox-basic -->
+	
+	<div id="surya-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
+
+			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+		<div class="changelog-container">
+		<iframe  width="100%" height="100%" frameborder="0" class="changelog-iframe" src="https://changelog.corvusrom.com/surya.html"></iframe>
+        </div>
+
+    </div> <!-- end of lightbox-basic -->
+	
+	<div id="X01BD-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
+
+			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+		<div class="changelog-container">
+		<iframe  width="100%" height="100%" frameborder="0" class="changelog-iframe" src="https://changelog.corvusrom.com/X01BD.html"></iframe>
+        </div>
+
+    </div> <!-- end of lightbox-basic -->
+	
+	<div id="lavender-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
+
+			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+		<div class="changelog-container">
+		<iframe  width="100%" height="100%" frameborder="0" class="changelog-iframe" src="https://changelog.corvusrom.com/lavender.html"></iframe>
+        </div>
+
+    </div> <!-- end of lightbox-basic -->
+	
+	<div id="sakura-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
+
+			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+		<div class="changelog-container">
+		<iframe  width="100%" height="100%" frameborder="0" class="changelog-iframe" src="https://changelog.corvusrom.com/sakura.html"></iframe>
+        </div>
+
+    </div> <!-- end of lightbox-basic -->
+	
+	<div id="payton-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
+
+			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+		<div class="changelog-container">
+		<iframe  width="100%" height="100%" frameborder="0" class="changelog-iframe" src="https://changelog.corvusrom.com/payton.html"></iframe>
+        </div>
+
+    </div> <!-- end of lightbox-basic -->
 
     <!-- end of device changelogs -->
     <!-- Scripts -->
