--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                         <ul class="list-unstyled li-space-lg">                            
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Read our <a class="turquoise" href="#your-link">Privacy Policy</a></div>
+                                <div class="media-body">Read our <a class="turquoise" href="https://www.corvusrom.com/privacy.html">Privacy Policy</a></div>
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
