--- a/download.html
+++ b/download.html
@@ -201,7 +201,7 @@
     <div id="collapseThree" class="collapse" aria-labelledby="beryllium" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">anonymous</span></h6>
+        <h6>Maintainer:  <span class="blue">RoXoR07</span></h6>
 		<h6>Device:  <span class="blue">Pocophone F1</span></h6>
 		<h6>Codename:  <span class="blue">Beryllium</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -229,7 +229,7 @@
     <div id="collapseFour" class="collapse" aria-labelledby="davinci" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">anonymous</span></h6>
+        <h6>Maintainer:  <span class="blue">MR.ROBOT.MK</span></h6>
 		<h6>Device:  <span class="blue">Redmi K20</span></h6>
 		<h6>Codename:  <span class="blue">Davinci</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -341,7 +341,7 @@
     <div id="collapseEight" class="collapse" aria-labelledby="mido" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">anonymous</span></h6>
+        <h6>Maintainer:  <span class="blue">Chintu</span></h6>
 		<h6>Device:  <span class="blue">Redmi Note 4</span></h6>
 		<h6>Codename:  <span class="blue">mido</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -397,7 +397,7 @@
     <div id="collapseTen" class="collapse" aria-labelledby="begonia" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue"> </span>Flamefusion</h6>
+        <h6>Maintainer:  <span class="blue"> </span>Sambit</h6>
 		<h6>Device:  <span class="blue">Redmi Note 8 Pro</span></h6>
 		<h6>Codename:  <span class="blue">Begonia</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -509,7 +509,7 @@
     <div id="collapseFourteen" class="collapse" aria-labelledby="vince" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">Mahmoudk1000</span></h6>
+        <h6>Maintainer:  <span class="blue"></span>anonymous</h6>
 		<h6>Device:  <span class="blue">Redmi 5 plus</span></h6>
 		<h6>Codename:  <span class="blue">vince</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -1026,7 +1026,7 @@
     <div id="collapseThirtyTwo" class="collapse" aria-labelledby="ysl" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">lostark13</span></h6>
+        <h6>Maintainer:  <span class="blue">uchihasushmit</span></h6>
 		<h6>Device:  <span class="blue">Redmi S2/Y2</span></h6>
 		<h6>Codename:  <span class="blue">ysl</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -1113,7 +1113,7 @@
     <div id="collapseThirtyFive" class="collapse" aria-labelledby="lavender" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">CHRISL7</span></h6>
+        <h6>Maintainer:  <span class="blue">anonymous</span></h6>
 		<h6>Device:  <span class="blue">Redmi Note 7</span></h6>
 		<h6>Codename:  <span class="blue">lavender</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -1139,7 +1139,7 @@
     <div id="collapseThirtySix" class="collapse" aria-labelledby="surya" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">thepsambit</span></h6>
+        <h6>Maintainer:  <span class="blue">sambit</span></h6>
 		<h6>Device:  <span class="blue">Poco X3</span></h6>
 		<h6>Codename:  <span class="blue">surya</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -1165,7 +1165,7 @@
     <div id="collapseThirtySeven" class="collapse" aria-labelledby="sakura" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">Darthinperator21</span></h6>
+        <h6>Maintainer:  <span class="blue">anonymous</span></h6>
 		<h6>Device:  <span class="blue">Redmi 6 Pro</span></h6>
 		<h6>Codename:  <span class="blue">sakura</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -1217,7 +1217,7 @@
     <div id="collapseThirtyNine" class="collapse" aria-labelledby="X01BD" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">Curious_To_Learn</span></h6>
+        <h6>Maintainer:  <span class="blue">anonymous</span></h6>
 		<h6>Device:  <span class="blue">Asus ZenFone Max Pro M2</span></h6>
 		<h6>Codename:  <span class="blue">X01BD</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
