Update to Latest Changes/Downloads

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Corvus OS is another retarded ROM with many retarded Customization">
+    <meta name="description" content="Corvus OS is another retarded ROM with many retarded Customizations">
     <meta name="author" content="Inovatik">
     <meta name="ocs-site-verification" content="8dfad1cdbb65120004fd0a75976f70a8" />
 
@@ -698,7 +698,7 @@
                     <!-- Counter -->
                     <div id="counter">
                         <div class="cell">
-                            <div class="counter-value number-count" data-count="42">1</div>
+                            <div class="counter-value number-count" data-count="50">1</div>
                             <p class="counter-info">+ Offcial Devices</p>
                         </div>
                         
