--- a/maintainer.html
+++ b/maintainer.html
@@ -74,7 +74,7 @@
                     <a class="nav-link page-scroll" href="index.html#preview">PREVIEW</a>
                 </li>
 				<li class="nav-item">
-                    <a class="nav-link page-scroll" href="https://github.com/Corvus-ROM">GITHUB</a>
+                    <a class="nav-link page-scroll" href="https://github.com/Corvus-R">GITHUB</a>
                 </li>
 
 
@@ -174,15 +174,7 @@
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
-								<div class="media-body">Gerrit <a class="turquoise" href="https://review.corvusrom.com">Review</a></div>
-								</li>
-								<li class="media">
-								<i class="fas fa-square"></i>
-								<div class="media-body">Jenkins <a class="turquoise" href="https://jenkins.corvusrom.com">Jenkins</a></div>
-								</li>
-								<li class="media">
-								<i class="fas fa-square"></i>
-								<div class="media-body">Github <a class="turquoise" href="https://github.com/Corvus-ROM">Source</a></div>
+								<div class="media-body">Github <a class="turquoise" href="https://github.com/Corvus-R">Source</a></div>
 								</li>
 								<li class="media">
 								<i class="fas fa-square"></i>
@@ -217,7 +209,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright ©2020 Corvus Rom. All Rights Reserved.</p>
+                    <p class="p-small">Copyright ©2021 Corvus Rom. All Rights Reserved.</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
