Update maintainer name

--- a/download.html
+++ b/download.html
@@ -1425,7 +1425,7 @@
     <div id="collapseFortySeven" class="collapse" aria-labelledby="gram" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer: <span class="blue">Manav</span></h6>
+        <h6>Maintainer: <span class="blue">Manavjit Singh</span></h6>
 		<h6>Device: <span class="blue">Poco M2 Pro</span></h6>
 		<h6>Codename: <span class="blue">gram</span></h6>
 		<h6>ROM Status: <span class="blue">Official</span></h6>
