whyred: update maintainer name
Signed-off-by: TheSanty <sudhiryadav.igi@gmail.com>
Change-Id: I064c4b0c8ce476dc3e8813801537da59c7c3166f

--- a/download.html
+++ b/download.html
@@ -593,7 +593,7 @@
     <div id="collapseSeventeen" class="collapse" aria-labelledby="whyred" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">NAHSEEZ</span></h6>
+        <h6>Maintainer:  <span class="blue">TheSanty</span></h6>
 		<h6>Device:  <span class="blue">Redmi Note 5 Pro</span></h6>
 		<h6>Codename:  <span class="blue">whyred</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
