Change RMX1851 maintainer

--- a/download.html
+++ b/download.html
@@ -1295,7 +1295,7 @@
     <div id="collapseFortyTwo" class="collapse" aria-labelledby="RMX1851" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer: <span class="blue">TheTablaster</span></h6>
+        <h6>Maintainer: <span class="blue">RealmeDiary</span></h6>
 		<h6>Device:  <span class="blue">Realme 3 Pro</span></h6>
 		<h6>Codename:  <span class="blue">RMX1851</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
