Update maintainer name for juice

--- a/download.html
+++ b/download.html
@@ -1451,8 +1451,8 @@
     <div id="collapseFortyEight" class="collapse" aria-labelledby="juice" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer: <span class="blue">donjuan</span></h6>
-		<h6>Device: <span class="blue">Poco M3/Redmi 9T/Redmi 9 Power/Redmi Note 9 4G</span></h6>
+        <h6>Maintainer: <span class="blue">Nathaniel Quitua</span></h6>
+		<h6>Device: <span class="blue">Poco M3 / Redmi 9T / Redmi 9 Power / Redmi Note 9 4G</span></h6>
 		<h6>Codename: <span class="blue">juice</span></h6>
 		<h6>ROM Status: <span class="blue">Official</span></h6>
        <hr class="new2">
